--- a/design.css
+++ b/design.css
@@ -22,7 +22,7 @@ header {
     border-radius: 10px;
     border: 4px solid black;
     box-shadow: 4px 4px 4px black;
-    background-image: linear-gradient(to right, #f3bd40, #f3c940, #f3bd40);
+    background-image: linear-gradient(to right, #996b00, #f3c940, #996b00);
     transition: all 0.5s;
 }
 header:hover {
